tests/spec/non_conformant/errors/import/miss/mixin/control_if/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/import/miss/mixin/control-if"
#[allow(unused)]
use super::rsass;

// From "sass-spec/spec/non_conformant/errors/import/miss/mixin/control-if/inside.hrx"

// Ignoring "inside", error tests are not supported yet.

// From "sass-spec/spec/non_conformant/errors/import/miss/mixin/control-if/outside.hrx"

// Ignoring "outside", error tests are not supported yet.
